fix: resolve markdown rendering and header display issues
- Move h2 subtitle inside header-content for proper layout
- Change header-content to flex-column for vertical stacking
- Remove white-space: pre-wrap from message-content to fix HTML rendering
- Add word-wrap and overflow-wrap for better text handling
- Improve h2 styling with proper spacing and opacity
- Fix list rendering in markdown parser to filter empty items
- Improve overall header visual hierarchy

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,8 +47,10 @@
                             <path d="M3 12h18M3 6h18M3 18h18"/>
                         </svg>
                     </button>
+                    <div id="modelSelectorContainer" class="model-selector-header-wrapper"></div>
                     <span class="flag">🇯🇵</span>
                     <h1>Japanese AI Tutor</h1>
+                    <h2>あなたの日本語講師</h2>
                 </div>
                 <button class="theme-toggle-btn" id="theme-toggle" title="Toggle theme">
                     <svg class="theme-icon-sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="display: none;">
@@ -91,7 +93,6 @@
                         </button>
                     </div>
                 </div>
-                    <h2>あなたの日本語講師</h2>
             </div>
             
             <div class="chat-container" id="chatContainer">
@@ -155,6 +156,7 @@
     <script src="js/app-state.js"></script>
     <script src="js/ui-utils.js"></script>
     <script src="js/conversation-history.js"></script>
+    <script src="js/model-selector.js"></script>
     <script src="js/messaging.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/document-generation.js"></script>
