Enhance UI: modernize banner, improve markdown styling, add notebook page, update themes, fix sidebar behavior, add GitHub workflow

--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -18,6 +18,9 @@
                 <button class="ai-doc-gen-btn" onclick="showLLMDocumentModal()" title="Generate custom study materials with AI">
                     <span>🤖</span> AI Document Generator
                 </button>
+                <button class="notebook-btn" onclick="goToNotebook()" title="Open learning notebook">
+                    <span>📓</span> Notebook
+                </button>
             </div>
             <div class="history-section">
                 <div class="history-header">Recent Conversations</div>
