--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,13 @@
                         </svg>
                         Start Learning
                     </a>
+                    <a href="notebook.html" class="btn-cta">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20">
+                            <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                            <path d="M2 17l10 5 10-5M2 12l10 5 10-5"/>
+                        </svg>
+                        Open Notebook
+                    </a>
                     <button class="btn-secondary" onclick="scrollToFeatures()">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20">
                             <circle cx="12" cy="12" r="10"/>
