--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,26 +39,25 @@
                     From basic hiragana to advanced kanji, from simple greetings to complex conversations.
                 </p>
                 <div class="hero-buttons">
-                    <a href="chat.html" class="btn-primary">
+                    <a href="login.html" class="btn-primary">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                            <path d="M11 7L9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5-5-5zm9 12h-8v2h8c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-8v2h8v14z"/>
                         </svg>
-                        Start Learning
+                        Sign In
                     </a>
-                    <a href="notebook.html" class="btn-cta">
+                    <a href="register.html" class="btn-cta">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/>
+                        </svg>
+                        Create Account
+                    </a>
+                    <a href="chat.html" class="btn-secondary">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20">
                             <path d="M12 2L2 7l10 5 10-5-10-5z"/>
                             <path d="M2 17l10 5 10-5M2 12l10 5 10-5"/>
                         </svg>
-                        Open Notebook
+                        Try as Guest
                     </a>
-                    <button class="btn-secondary" onclick="scrollToFeatures()">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20">
-                            <circle cx="12" cy="12" r="10"/>
-                            <path d="M12 16v-4M12 8h.01"/>
-                        </svg>
-                        Learn More
-                    </button>
                 </div>
             </div>
 
@@ -111,6 +110,37 @@
                     <div class="feature-icon">🎯</div>
                     <h3>Progress Tracking</h3>
                     <p>Track your learning journey with conversation history and export your progress at any time.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Authentication Section -->
+        <div class="quick-start-section">
+            <h2 class="section-title">Join Our Learning Community</h2>
+            <div class="quick-start-grid">
+                <div class="quick-start-card">
+                    <div class="quick-start-number">👤</div>
+                    <h3>Sign In</h3>
+                    <p>Access your saved progress and continue where you left off</p>
+                    <a href="login.html" class="btn-secondary" style="margin-top: 16px; width: 100%; justify-content: center;">
+                        Sign In
+                    </a>
+                </div>
+                <div class="quick-start-card">
+                    <div class="quick-start-number">✨</div>
+                    <h3>Create Account</h3>
+                    <p>Track your progress, save conversations, and personalize your learning</p>
+                    <a href="register.html" class="btn-primary" style="margin-top: 16px; width: 100%; justify-content: center;">
+                        Register Free
+                    </a>
+                </div>
+                <div class="quick-start-card">
+                    <div class="quick-start-number">🚀</div>
+                    <h3>Try as Guest</h3>
+                    <p>Start learning immediately without creating an account</p>
+                    <a href="chat.html" class="btn-secondary" style="margin-top: 16px; width: 100%; justify-content: center;">
+                        Start Now
+                    </a>
                 </div>
             </div>
         </div>
